<resources>
    <string name="app_name">长房里员工端</string>
    <string name="btn_login">登 录</string>
    <string name="txt_forget_password">忘记密码？</string>
    <string name="txt_order">工单</string>
    <string name="txt_complain">投诉</string>
    <string name="txt_inspect">巡检</string>
    <string name="txt_task">任务</string>
    <string name="txt_notice">社区公告</string>
    <string name="txt_person">个人资料</string>
    <string name="txt_sign">签到</string>
    <string name="txt_setting">设置</string>
    <string name="txt_submit">提交</string>

    <!--fragment_mine-->
    <string name="mine_txt_change_account">换个账号登录</string>
    <string name="mine_txt_logout">退出</string>
    <string name="mine_txt_cancel">取消</string>

    <!--activity_person-->
    <string name="person_txt_name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名</string>
    <string name="person_txt_depart">部&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;门</string>
    <string name="person_txt_no">工&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="person_txt_gender">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别</string>
    <string name="person_txt_birth">出生日期</string>
    <string name="person_txt_tel">联系方式</string>
    <string name="person_txt_join_date">入职时间</string>

    <!--image_preview-->
    <string name="xui_preview_play_failed">播放失败</string>
    <string name="xui_preview_count_string">%1$d/%2$d</string>

    <!--photo_picker-->
    <string name="permission_request_denied">需要相应的权限</string>
    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
    <string name="error_original">大小不超过 %1$sM。</string>

    <!--order_detail-->
    <string name="address_value">%1$s&#160;&#160;%2$s&#160;&#160;%3$s</string>
</resources>
