<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/main_fl_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/view_background"
            android:padding="@dimen/dp_3"
            >
            <ImageView
                android:id="@+id/main_tabs_iv_home"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_tab_home_focus"
                />
            <ImageView
                android:id="@+id/main_tabs_iv_mine"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_tab_mine_blur"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_ll_logout_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_loading_trans"
        android:gravity="bottom"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_solid_white_shape"
            android:layout_margin="@dimen/dp_10"
            >
            <TextView
                android:id="@+id/person_ll_logout_layer_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mine_txt_change_account"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_15"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/text_desc"
                />
            <TextView
                android:id="@+id/person_ll_logout_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mine_txt_logout"
                android:textColor="@color/text_warn"
                android:textSize="@dimen/sp_14"
                android:padding="@dimen/dp_15"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/person_ll_logout_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mine_txt_cancel"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:background="@drawable/bg_solid_white_shape"
            android:padding="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_5"
            />
    </LinearLayout>


</FrameLayout>