<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/body_background">
    <LinearLayout
        android:id="@+id/mine_ll_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/mine_iv_user_avatar"
            android:layout_width="@dimen/dp_80"
            android:layout_height="@dimen/dp_80"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">
            <TextView
                android:id="@+id/mine_tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:textSize="@dimen/sp_14"/>
            <TextView
                android:id="@+id/mine_tv_user_depart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:textColor="@color/text_white"
                android:textSize="@dimen/sp_13"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@drawable/icon_action_right"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/view_background"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mine_tv_person"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_10"
            android:drawableTop="@drawable/icon_mine_person"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/dp_18"
            android:paddingTop="@dimen/dp_18"
            android:text="@string/txt_person"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14" />
        <TextView
            android:id="@+id/mine_tv_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_10"
            android:drawableTop="@drawable/icon_mine_setting"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/dp_18"
            android:paddingTop="@dimen/dp_18"
            android:text="@string/txt_setting"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14" />
        <TextView
            android:id="@+id/mine_tv_sign"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="@dimen/dp_10"
            android:drawableTop="@drawable/icon_mine_sign"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/dp_18"
            android:paddingTop="@dimen/dp_18"
            android:text="@string/txt_sign"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
