<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.PersonActivity">
    <include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_140"
        android:background="@color/view_background">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_120"
            android:background="@color/main_background"/>
        <ImageView
            android:id="@+id/person_iv_avatar"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_user_default"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"
        android:background="@color/text_white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_txt_name"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"
            />

        <TextView
            android:id="@+id/person_tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_desc"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_action_right"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_20"
            android:layout_height="1px"
            android:background="@color/text_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_desc"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"
        android:background="@color/text_white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_txt_depart"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"
            />

        <TextView
            android:id="@+id/person_tv_depart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_desc"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_action_right"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_20"
            android:layout_height="1px"
            android:background="@color/text_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_desc"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"
        android:background="@color/text_white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_txt_no"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"
            />

        <TextView
            android:id="@+id/person_tv_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_desc"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_action_right"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_20"
            android:layout_height="1px"
            android:background="@color/text_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_desc"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_ll_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"
        android:background="@color/text_white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_txt_gender"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"
            />

        <TextView
            android:id="@+id/person_tv_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_desc"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_action_right"
            android:visibility="visible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_20"
            android:layout_height="1px"
            android:background="@color/text_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_desc"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_ll_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"
        android:background="@color/text_white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_txt_birth"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"
            />

        <TextView
            android:id="@+id/person_tv_birth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_desc"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_action_right"
            android:visibility="visible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_20"
            android:layout_height="1px"
            android:background="@color/text_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_desc"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/person_ll_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"
        android:background="@color/text_white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_txt_tel"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"
            />

        <TextView
            android:id="@+id/person_tv_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_desc"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_action_right"
            android:visibility="visible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/dp_20"
            android:layout_height="1px"
            android:background="@color/text_white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/text_desc"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15"
        android:background="@color/text_white"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_txt_join_date"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/sp_14"
            android:layout_marginLeft="@dimen/dp_5"
            />

        <TextView
            android:id="@+id/person_tv_join_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_desc"
            android:textSize="@dimen/sp_14"
            android:gravity="right"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_action_right"
            android:visibility="invisible"
            />
    </LinearLayout>
</LinearLayout>